fix(portal-dashboard): Adjust component colors to align with theme

--- a/apps/portal-dashboard/app/tailwind.css
+++ b/apps/portal-dashboard/app/tailwind.css
@@ -4,6 +4,31 @@
 
 @layer base {
   :root {
+    --system-color-1: 173 24% 7%; /* App background */
+    --system-color-2: 175 24% 9%; /* Subtle background */
+    --system-color-3: 174 55% 11%; /* UI element background */
+    --system-color-4: 176 93% 12%; /* Hovered UI element */
+    --system-color-5: 175 80% 16%; /* Active/selected UI element background */
+    --system-color-6: 174 63% 21%; /* Subtle borders and separators */
+    --system-color-7: 174 58% 26%; /* UI element border and focus */
+    --system-color-8: 173 59% 31%; /* Hovered UI element border */
+    --system-color-9: 174 80% 36%; /* Solid backgrounds */
+    --system-color-10: 172 85% 38%; /* Hovered solid background */
+    --system-color-11: 170 90% 45%; /* Low contrast text */
+    --system-color-12: 163 69% 81%; /* High contrast text */
+    --lume-bg-register: url("./images/lume-bg-register.png");
+    --lume-bg-reset-password: url("./images/lume-bg-reset-password.png");
+    --lume-bg-login: url("./images/lume-bg-login.png");
+
+    --background: var(--system-color-1);
+    --foreground: var(--system-color-12);
+
+    --card: var(--system-color-6);
+    --card-foreground: var(--system-color-11);
+
+    --popover: var(--system-color-2);
+    --popover-foreground: var(--system-color-11);
+
     /* System Colors */
     --system-color-1: 173 24% 7%; /* App background */
     --system-color-2: 175 24% 9%; /* Subtle background */
@@ -56,6 +81,7 @@
     --radius: 6px;
   }
 
+
   .dark {
     /* Dark Theme System Colors */
     --system-color-1: 173 24% 7%;
@@ -72,6 +98,7 @@
     --system-color-12: 163 69% 81%;
   }
 }
+
 
 @layer base {
   * {
